# kioku

./: .gitignore  CHANGELOG.md  Justfile  README.md  cabal.project  flake.module.nix  flake.nix  mina.kdl  mori.dhall
.seihou/: config.dhall  manifest.json
agents/skills/release/: SKILL.md
docs/masterplans/: 1-kioku-reusable-agent-memory-session-library.md  2-kioku-review-remediation-correctness-resilience-and-hygiene.md  3-kioku-follow-up-scene-freshness-and-filtered-ann-recall-quality.md
docs/plans/: 1-kioku-scaffold-and-core-extraction.md  10-propagate-memory-forget-operations-to-scenes-personas-and-workspace-mirrors.md  11-harden-worker-resilience-with-ack-policy-bounded-retries-and-loop-supervision.md  12-enforce-aggregate-invariants-for-lineage-resume-correlation-and-idempotent-commands.md  13-harden-schema-and-recall-with-indexes-constraints-and-scope-identity-fixes.md  14-align-read-model-reconciliation-with-keiro-schema-relocation-and-guard-embedded-migrations.md  15-tighten-cli-and-api-surface-validation.md  16-add-distillation-replay-metadata.md  17-refresh-scenes-and-personas-when-a-memory-s-confidence-changes.md  18-build-a-recall-quality-harness-that-reproduces-filtered-ann-starvation.md  19-fix-filtered-ann-starvation-in-vector-recall.md  2-kioku-hybrid-retrieval-pgvector-fts-rrf.md  20-move-kioku-off-codd-onto-pg-migrate-and-upgrade-the-keiro-kiroku-cohort.md  3-kioku-distillation-pyramid-l0-to-l3.md  4-rei-migration-to-kioku.md  5-mori-agent-exec-with-kioku-memory.md  6-shikigami-memory-integration-with-kioku.md  7-awaiting-session-state-for-durable-park-and-resume.md  8-add-first-class-provenance.md  9-make-l1-distillation-idempotent-and-debounce-distillation-timers.md
docs/user/: README.md  cli-reference.md  concepts.md  configuration.md  distillation.md  getting-started.md  integrations.md  library-api.md  recall.md  troubleshooting.md  upgrading-to-pg-migrate.md
kioku-api/: CHANGELOG.md  LICENSE  kioku-api.cabal
kioku-api/src/Kioku/: Id.hs  Prelude.hs
kioku-api/src/Kioku/Api/: Scope.hs  Types.hs
kioku-cli/: CHANGELOG.md  kioku-cli.cabal
kioku-cli/app/: Main.hs
kioku-cli/src/Kioku/: Cli.hs
kioku-cli/src/Kioku/Cli/: Options.hs  Scope.hs
kioku-cli/src/Kioku/Cli/Commands/: Demo.hs  DemoSession.hs  Distill.hs  Persona.hs  Recall.hs  Scenes.hs  Worker.hs
kioku-cli/test/: Main.hs
kioku-cli/test/Kioku/Cli/: ParserSpec.hs
kioku-core/: CHANGELOG.md  kioku-core.cabal
kioku-core/.kioku/persona/: rei-intention-intention_distill_test.md
kioku-core/.kioku/scenes/: rei-intention-intention_distill_test.md
kioku-core/src/Kioku/: App.hs  Memory.hs  ReadModel.hs  Recall.hs  Session.hs
kioku-core/src/Kioku/Distill/: Consolidate.hs  Extract.hs  L1.hs  L2.hs  L3.hs  Persona.hs  Runtime.hs  Scene.hs  ScopeIdentity.hs  Timer.hs
kioku-core/src/Kioku/Distill/Timer/: Outcome.hs  Worker.hs
kioku-core/src/Kioku/Memory/: Domain.hs  Embedding.hs  EventStream.hs  ReadModel.hs
kioku-core/src/Kioku/Memory/Embedding/: Worker.hs
kioku-core/src/Kioku/Recall/: Capability.hs
kioku-core/src/Kioku/Session/: Domain.hs  EventStream.hs  ReadModel.hs
kioku-core/src/Kioku/Worker/: Failure.hs
kioku-core/test/: Main.hs
kioku-core/test/Kioku/: AwaitingSpec.hs  DistillSpec.hs  EmbeddingWorkerSpec.hs  IdempotencySpec.hs  ReadModelReconcileSpec.hs  RecallHarness.hs  RecallSpec.hs  RecallSqlSpec.hs  ReiCompatSpec.hs  SchemaSpec.hs  ScopeIdentitySpec.hs  SessionInvariantsSpec.hs  SessionLineageSpec.hs  TimerWorkerSpec.hs
kioku-migrate/: CHANGELOG.md  kioku-migrate.cabal
kioku-migrate/app/: Main.hs
kioku-migrations/: CHANGELOG.md  kioku-migrations.cabal
kioku-migrations/app/: Main.hs
kioku-migrations/codd-upgrade/: README.md  realign-keiro-migration-timestamps.sql  relocate-keiro-tables-to-keiro-schema.sql
kioku-migrations/migrations/: 0001-kioku-base.sql  0005-kioku-awaiting-session-state.sql  0008-kioku-schema-hardening.sql  0010-kioku-scope-identity-recompute.sql  manifest
kioku-migrations/sql-migrations/: 2026-06-24-01-00-00-kioku-memory-embeddings.sql  2026-06-24-02-00-00-kioku-distillation.sql  2026-06-27-20-35-00-kioku-session-delegation-lineage.sql  2026-07-03-14-37-18-kioku-session-readmodel-registry-bump.sql  2026-07-10-14-41-38-kioku-l1-watermarks.sql  2026-07-11-17-45-43-kioku-embedding-schema-heal.sql
kioku-migrations/src/Kioku/: Migrations.hs
kioku-migrations/src/Kioku/Migrations/History/: Codd.hs
kioku-migrations/src/Kioku/Migrations/Internal/: Definition.hs  EmbedFile.hs
kioku-migrations/test/: Main.hs
kioku-migrations/test-support/Kioku/Migrations/: TestSupport.hs
kioku-migrations/test/fixtures/: pre-cutover-schema.sql
mori/: repo-id
nix/: haskell.nix
