cabal-version:   3.0
name:            kioku-cli
version:         0.1.0.0
synopsis:        kioku command-line interface
description:
  Command-line entry point for kioku demos and operational commands.

license:         BSD-3-Clause
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com
copyright:       2026 Nadeem Bitar
category:        Data
build-type:      Simple
tested-with:     GHC >=9.12 && <9.13
homepage:        https://github.com/shinzui/kioku
bug-reports:     https://github.com/shinzui/kioku/issues
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/shinzui/kioku.git
  subdir:   kioku-cli

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Kioku.Cli
    Kioku.Cli.Commands.Demo
    Kioku.Cli.Commands.DemoSession
    Kioku.Cli.Commands.Distill
    Kioku.Cli.Commands.Persona
    Kioku.Cli.Commands.Recall
    Kioku.Cli.Commands.Scenes
    Kioku.Cli.Commands.Worker
    Kioku.Cli.Options
    Kioku.Cli.Scope

  build-depends:
    , async                 >=2.2      && <2.3
    , base                  >=4.21     && <5
    , containers            >=0.6      && <0.8
    , effectful             >=2.5      && <2.7
    , kioku-api             ^>=0.1.0.0
    , kioku-core            ^>=0.1.0.0
    , kiroku-store          ^>=0.3.0.1
    , optparse-applicative  >=0.18     && <0.20
    , text                  >=2.1      && <2.2
    , time                  >=1.12     && <1.15

executable kioku
  import:         warnings, shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base       >=4.21     && <5
    , kioku-cli  ^>=0.1.0.0

test-suite kioku-cli-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  other-modules:  Kioku.Cli.ParserSpec
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                  >=4.21     && <5
    , kioku-api             ^>=0.1.0.0
    , kioku-cli             ^>=0.1.0.0
    , kioku-core            ^>=0.1.0.0
    , optparse-applicative  >=0.18
    , tasty                 >=1.5
    , tasty-hunit           >=0.10
    , text                  >=2.1
