cabal-version: 3.0
name:          kioku-core
version:       0.1.0.0
synopsis:      Reusable agent memory runtime
description:
  Core runtime for kioku. M1 establishes the application effect stack; later
  milestones add the memory and session aggregates.

license:       BSD-3-Clause
author:        Nadeem Bitar
maintainer:    nadeem@gmail.com
copyright:     2026 Nadeem Bitar
category:      Data
build-type:    Simple
tested-with:   GHC >=9.12 && <9.13

common warnings
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    MultilineStrings
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QualifiedDo
    TemplateHaskell

library
  import:          warnings, shared
  hs-source-dirs:  src
  exposed-modules:
    Kioku.App
    Kioku.Memory
    Kioku.Memory.Domain
    Kioku.Memory.EventStream
    Kioku.Memory.ReadModel
    Kioku.Recall
    Kioku.Session
    Kioku.Session.Domain
    Kioku.Session.EventStream
    Kioku.Session.ReadModel

  build-depends:
    , aeson                   >=2.2
    , base                    >=4.21 && <5
    , bytestring              >=0.11
    , containers              >=0.6
    , contravariant           >=1.5
    , contravariant-extras    >=0.3
    , effectful               >=2.5
    , effectful-core          >=2.5
    , generic-lens            >=2.2
    , hasql                   >=1.6
    , hasql-pool              >=1.2
    , hasql-transaction       >=1.0
    , hs-opentelemetry-api    >=1.0
    , keiki                   >=0.1
    , keiro
    , keiro-core
    , kioku-api
    , kiroku-store
    , lens                    >=5.2
    , mmzk-typeid             >=0.7
    , shibuya-core
    , shibuya-kiroku-adapter
    , text                    >=2.1
    , time                    >=1.12
    , uuid                    >=1.3

test-suite kioku-test
  import:         warnings, shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Kioku.ReiCompatSpec
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson                          >=2.2
    , base                           >=4.21 && <5
    , bytestring                     >=0.11
    , containers                     >=0.6
    , kioku-api
    , kioku-core
    , kioku-migrations:test-support
    , tasty                          >=1.5
    , tasty-hunit                    >=0.10
