cabal-version:      3.0
name:               kioku-migrations
version:            0.1.0.0
synopsis:           Schema migrations for kioku
description:
  Owns kioku schema evolution. Calls the kiroku-store-migrations and
  keiro-migrations libraries directly, then embeds kioku read-model
  migrations through codd.

license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Database
build-type:         Simple
extra-source-files: sql-migrations/*.sql

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules: Kioku.Migrations
  build-depends:
    , base                     >=4.18   && <5
    , bytestring               >=0.11   && <0.13
    , codd                     >=0.1.8  && <0.2
    , codd-extras
    , file-embed               >=0.0.15 && <0.0.17
    , keiro-migrations
    , kiroku-store-migrations
    , time                     >=1.12   && <1.15

executable kioku-migrate
  import:         shared
  main-is:        Main.hs
  hs-source-dirs: app
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base
    , codd
    , kioku-migrations
    , time              >=1.12 && <1.15

library test-support
  import:          shared
  visibility:      public
  hs-source-dirs:  test-support
  exposed-modules: Kioku.Migrations.TestSupport
  build-depends:
    , base                   >=4.18 && <5
    , codd-extras
    , codd-extras:ephemeral
    , kioku-migrations
    , text                   >=2.0  && <2.2
    , time                   >=1.12 && <1.15

test-suite kioku-migrations-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                           >=4.18 && <5
    , bytestring                     >=0.11 && <0.13
    , hasql                          >=1.6
    , kioku-migrations
    , kioku-migrations:test-support
    , tasty                          >=1.5
    , tasty-hunit                    >=0.10
    , text                           >=2.0  && <2.2
