cabal-version:      3.0
name:               kioku-migrations
version:            0.1.0.0
synopsis:           Schema migrations for kioku
description:
  Owns kioku schema evolution as a native pg-migrate component and composes
  it with the kiroku and keiro migration components.

license:            BSD-3-Clause
author:             Nadeem Bitar
maintainer:         nadeem@gmail.com
copyright:          2026 Nadeem Bitar
category:           Database
build-type:         Simple
extra-doc-files:
  CHANGELOG.md
  codd-upgrade/README.md

extra-source-files:
  codd-upgrade/*.sql
  migrations/*.sql
  migrations/manifest
  migrations.lock
  test/fixtures/*.sql

common shared
  default-language:   GHC2024
  default-extensions:
    BlockArguments
    DeriveAnyClass
    DuplicateRecordFields
    OverloadedLabels
    OverloadedStrings

library
  import:          shared
  hs-source-dirs:  src
  exposed-modules:
    Kioku.Migrations
    Kioku.Migrations.History.Codd

  other-modules:
    Kioku.Migrations.Internal.Definition
    Kioku.Migrations.Internal.EmbedFile

  build-depends:
    , aeson                    >=2.1      && <2.3
    , base                     >=4.18     && <5
    , bytestring               >=0.11     && <0.13
    , containers               >=0.6      && <0.8
    , hasql                    >=1.10     && <1.11
    , hasql-transaction        >=1.2      && <1.3
    , keiro-migrations
    , kiroku-store-migrations
    , pg-migrate               ^>=1.1.0.0
    , pg-migrate-embed         ^>=1.1.0.0
    , pg-migrate-import-codd   ^>=1.1.0.0
    , template-haskell         >=2.20     && <2.24
    , text                     >=2.0      && <2.2

library test-support
  import:          shared
  visibility:      public
  hs-source-dirs:  test-support
  exposed-modules: Kioku.Migrations.TestSupport
  build-depends:
    , base                     >=4.18     && <5
    , ephemeral-pg             >=0.2      && <0.3
    , hasql                    >=1.10     && <1.11
    , kioku-migrations
    , pg-migrate-test-support  ^>=1.1.0.0
    , text                     >=2.0      && <2.2

test-suite kioku-migrations-test
  import:         shared
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base                           >=4.18     && <5
    , hasql                          >=1.6
    , kioku-migrations
    , kioku-migrations:test-support
    , pg-migrate                     ^>=1.1.0.0
    , pg-migrate-embed               ^>=1.1.0.0
    , pg-migrate-import-codd         ^>=1.1.0.0
    , tasty                          >=1.5
    , tasty-hunit                    >=0.10
    , text                           >=2.0      && <2.2
